force-app/main/default/objects/Product__c/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <label>brand</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>