force-app/main/default/objects/Product__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>color</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>