force-app/main/default/objects/Product__c/fields/heel_height__c.field-meta.xml
<CustomField>
    <fullName>heel_height__c</fullName>
    <label>heel height</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>