force-app/main/default/objects/Product__c/fields/imageUrl__c.field-meta.xml
<CustomField>
    <fullName>imageUrl__c</fullName>
    <description>Url of an image</description>
    <label>imageUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>