force-app/main/default/objects/Product__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>width</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Wide</fullName>
            </value>
            <value>
                <fullName>Extra Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>